--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -16,7 +16,6 @@ permissions:
 
 jobs:
   build:
-
     name: Build and test
     runs-on: ubuntu-22.04
 
@@ -33,8 +32,19 @@ jobs:
         path: deps
         key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
         restore-keys: ${{ runner.os }}-mix-
+    - name: Restore PLT cache for Dialyzer
+      uses: actions/cache@v4
+      with:
+        path: _build
+        key: ${{ runner.os }}-plt-${{ hashFiles('**/mix.lock') }}
+        restore-keys: ${{ runner.os }}-plt-
     - name: Install dependencies
       run: mix deps.get
+    - name: Run code quality checks (Credo)
+      run: mix credo --strict
+    - name: Run static type analysis (Dialyzer)
+      run: mix dialyzer --plt
+      continue-on-error: true
     - name: Run tests with coverage
       run: mix test --cover
     - name: Display coverage report
